--- a/contact-app/src/app/contact/contact.component.html
+++ b/contact-app/src/app/contact/contact.component.html
@@ -11,14 +11,16 @@
         <form [formGroup]="contactForm" (ngSubmit)="onSubmit()">
           <div class="form-group">
             <label>Name</label>
-            <input type="text" formControlName="name" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.name.errors }" />
+            <input type="text" formControlName="name" class="form-control"
+              [ngClass]="{ 'is-invalid': submitted && f.name.errors }" />
             <div *ngIf="submitted && f.name.errors" class="invalid-feedback">
               <div *ngIf="f.name.errors.required">Name is required</div>
             </div>
           </div>
           <div class="form-group">
             <label>Email</label>
-            <input type="text" formControlName="email" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.email.errors }" />
+            <input type="text" formControlName="email" class="form-control"
+              [ngClass]="{ 'is-invalid': submitted && f.email.errors }" />
             <div *ngIf="submitted && f.email.errors" class="invalid-feedback">
               <div *ngIf="f.email.errors.required">Email is required</div>
               <div *ngIf="f.email.errors.email">Email must be a valid email address</div>
@@ -27,11 +29,13 @@
           <div class="form-group">
             <label>Gender</label> <br>
             <label>
-              <input type="radio" value="Male" formControlName="gender" [ngClass]="{ 'is-invalid': submitted && f.dob.errors }">
+              <input type="radio" value="Male" formControlName="gender"
+                [ngClass]="{ 'is-invalid': submitted && f.dob.errors }">
               <span> Male </span>
             </label> &nbsp;
             <label>
-              <input type="radio" value="Female" formControlName="gender" [ngClass]="{ 'is-invalid': submitted && f.dob.errors }">
+              <input type="radio" value="Female" formControlName="gender"
+                [ngClass]="{ 'is-invalid': submitted && f.dob.errors }">
               <span> Female </span>
             </label>
             <div *ngIf="submitted && f.gender.errors" class="invalid-feedback">
@@ -41,8 +45,8 @@
 
           <div class="form-group">
             <label>Date Of Birth</label>
-            <input type="text" formControlName="dob" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.dob.errors }"
-              bsDatepicker />
+            <input type="text" formControlName="dob" class="form-control"
+              [ngClass]="{ 'is-invalid': submitted && f.dob.errors }" bsDatepicker />
             <div *ngIf="submitted && f.dob.errors" class="invalid-feedback">
               <div *ngIf="f.dob.errors.required">Date of birth is required</div>
             </div>
@@ -50,15 +54,16 @@
 
           <div class="form-group">
             <label>Amount</label>
-            <input type="number" formControlName="amount" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.amount.errors }" />
+            <input type="number" formControlName="amount" class="form-control"
+              [ngClass]="{ 'is-invalid': submitted && f.amount.errors }" />
             <div *ngIf="submitted && f.amount.errors" class="invalid-feedback">
               <div *ngIf="f.amount.errors.required">Amount is required</div>
             </div>
           </div>
 
           <div class="form-group">
-            <button type="submit" class="btn btn-primary">save</button>&nbsp;<button type="button" routerLink="/contacts"
-              class="btn btn-primary">Go to List</button>
+            <button type="submit" class="btn btn-primary">save</button>&nbsp;<button type="button"
+              routerLink="/contacts" class="btn btn-primary">Go to List</button>
           </div>
         </form>
       </div>
