Add Inheritance (OOP) using common

--- a/contact-app/src/app/app.component.html
+++ b/contact-app/src/app/app.component.html
@@ -1,2 +1,17 @@
 <!--The content below is only a placeholder and can be replaced.-->
+
+
+<nav class="navbar navbar-default">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <a class="navbar-brand" href="#">Code Chanllenge</a>
+      </div>
+      <ul class="nav navbar-nav">
+        <li class="active"><a routerLink="/contacts">Contact</a></li>
+        <li class=""><a routerLink="/hours">Register Hours</a></li>
+    </ul>
+    </div>
+  </nav>
+  
+  
 <router-outlet></router-outlet>
