--- a/contact-app/src/app/app.component.html
+++ b/contact-app/src/app/app.component.html
@@ -4,7 +4,7 @@
 <nav class="navbar navbar-default">
     <div class="container-fluid">
       <div class="navbar-header">
-        <a class="navbar-brand" href="#">Code Chanllenge</a>
+        <a class="navbar-brand" href="#">Code Challenge</a>
       </div>
       <ul class="nav navbar-nav">
         <li class="active"><a routerLink="/contacts">Contact</a></li>
